fixed xpath error, swapped to aria label for better scraping

--- a/popup.html
+++ b/popup.html
@@ -82,7 +82,7 @@
     <div id="posts"></div>
     <div id="footer">
       <p>Powered by <a href="https://automatetowin.com/patterns-of-ai-generated-content" target="_blank" rel="noopener">Automate to Win</a></p>
-      <p>Source Code <a href="https://github.com/elmstreetshawn/linkedlens_v2" target="_blank" rel="noopener">Shawn David: Systems Engineer</a></p>
+      <p>Created by <a href="https://github.com/elmstreetshawn" target="_blank" rel="noopener">Shawn David</a> | <a href="https://github.com/elmstreetshawn/linkedlens_v2" target="_blank" rel="noopener">Source Code</a></p>
     </div>
     <script src="popup.js"></script>
   </body>
